--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,7 @@
 }
 
 .aboutHeader{
-    @apply font-thin text-white text-3xl md:text-4xl lg:text-5xl xl:text-6xl pt-4 sm:pt-6 md:pt-8 lg:pt-10 xl:pt-12;
+    @apply font-thin text-black text-3xl md:text-4xl lg:text-5xl xl:text-6xl pt-4 sm:pt-6 md:pt-8 lg:pt-10 xl:pt-12;
 }
 
 .cardBg{
@@ -19,7 +19,7 @@
 }
 
 .cardTxt{
-    @apply font-thin text-white text-base md:text-lg lg:text-xl xl:text-2xl p-2 sm:p-4 md:p-6 lg:p-8 xl:p-12;
+    @apply  text-black text-base md:text-lg lg:text-xl xl:text-2xl p-2 sm:p-4 md:p-6 lg:p-8 xl:p-12;
 }
 
 .exploreLink{
