--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,7 @@
 }
 
 .aboutHeader{
-    @apply font-thin text-white text-3xl md:text-4xl lg:text-5xl xl:text-6xl pt-4 sm:pt-6 md:pt-8 lg:pt-10 xl:pt-12;
+    @apply font-thin text-white z-0 text-3xl md:text-4xl lg:text-5xl xl:text-6xl pt-4 sm:pt-6 md:pt-8 lg:pt-10 xl:pt-12;
 }
 
 .cardBg{
@@ -42,4 +42,9 @@
 
 .sandwichHeader{
     @apply font-thin text-white text-lg md:text-xl lg:text-2xl xl:text-3xl underline decoration-1 underline-offset-8;
+}
+
+
+.iconSize{
+    @apply text-rudi-yellow size-96 stroke-1;
 }
