--- a/app/globals.css
+++ b/app/globals.css
@@ -41,7 +41,7 @@
 }
 
 .sandwichHeader{
-    @apply font-thin text-white text-lg md:text-xl lg:text-2xl xl:text-3xl underline decoration-1 underline-offset-8;
+    @apply font-thin text-rudi-yellow text-lg md:text-xl lg:text-2xl xl:text-3xl underline decoration-1 underline-offset-8;
 }
 
 
